<resources>
    <string name="app_name">WhatToPlay</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_top">Hall of Fame</string>
    <string name="title_hot">Hot</string>
    <string name="title_discover">Discover</string>
    <string name="title_new">New</string>
    <string name="title_coming_soon">Coming Soon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
